Homepage with covers and Table of Contents (issue) pages

--- a/_includes/styles/globals.css
+++ b/_includes/styles/globals.css
@@ -45,3 +45,10 @@ li {
 	text-align: center;
 	margin-bottom: 0.5rem;
 }
+
+/* Sensible Default Image Styles */
+img {
+	display: block;
+	max-width: 100%;
+	font-style: italic;
+}
