--- a/_includes/styles/postlist.css
+++ b/_includes/styles/postlist.css
@@ -5,3 +5,7 @@
 	font-weight: bold;
 	font-size: 1.125rem;
 }
+
+.post-issue {
+	display: none;
+}
